Fixing layout issue

--- a/app/less/layout.less
+++ b/app/less/layout.less
@@ -82,7 +82,7 @@ h2,h3,h4 {
 }
 
 .main-fluid {
-  display: block;
+  display: inline-block;
   position: relative;
   width: 100%;
   max-width: 1200px;
