--- a/app/less/views/design.less
+++ b/app/less/views/design.less
@@ -25,10 +25,6 @@
   }
 }
 
-.main-fluid.design {
-  height: 520px;
-}
-
 .design-intro {
   width: 100%;
   background-image: url('/img/logo.jpg');
